# ATCG1

Assignment R02/framework_r02/qt4/: AABBox.cpp  AppWidget.cpp  AppWidget.h  CMakeLists.txt  DirectionalLight.cpp  GlassShader.h  LambertShader.cpp  PhongShader.h  Plane.h  Ray.cpp  Raytracer.cpp  Raytracer.h  Sphere.cpp  Surface.h  TextureShader.cpp  atcg1_framework_vs2008.vcproj  atcg1_framework_vs2012.vcxproj  main.cpp
Assignment R02/framework_r02/qt5/: AABBox.cpp  AABBox.h  AppWidget.cpp  AppWidget.h  CMakeLists.txt  ColorT.h  DirectionalLight.h  GlassShader.cpp  LambertShader.h  Light.h  Matrix33T.h  MatrixT.h  PhongShader.cpp  PinholeCamera.cpp  PinholeCamera.h  Plane.cpp  PointLight.cpp  PointLight.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Shader.h  Sphere.cpp  Sphere.h  SurfaceList.cpp  SurfaceList.h  TextureShader.h  Types.h  VectorT.h  atcg1_framework_vs2008.sln  atcg1_framework_vs2008.vcproj  atcg1_framework_vs2012.sln  atcg1_framework_vs2012.vcxproj  atcg1_framework_vs2012.vcxproj.filters  main.cpp
